# trabajo_planificacion

./: CMakeLists.txt  README.md  astar_voronoi_plugin.xml  package.xml
cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
include/astar_voronoi/: astar_voronoi.h
launch/: amcl_demo.launch  map1.launch  map1_rrt.launch  map1teb.launch  map2.launch  map2_rrt.launch  map3.launch  map3_rrt.launch  map4.launch  map4_rrt.launch  map5.launch  map5_rrt.launch  map5teb.launch  map6_rrt.launch  map6teb.launch  map7_rrt.launch  map7teb.launch
launch/includes/: asus_xtion_pro_amcl.launch.xml
maps/: map1.yaml  map2.yaml  map3.yaml  map4.yaml  map5.yaml  map6.yaml  map7.yaml
scripts/: csv_to_map.py  path_planning.py  potential_field_planning.py  rrt_path.py
src/: astar_voronoi.cpp  measure_performance.py  tebfeedback.py
srv/: path_calc.srv
